<resources>
    <string name="app_name">TareaB</string>
    <string name="aceptar">aceptar</string>
    <string name="cancelar">cancelar</string>
    <string name="productos">PRODUCTOS</string>
    <string name="tipo_de_producto">Tipo de producto</string>
    <string name="id_del_producto">ID del producto</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar">iniciar</string>
    <string name="ok">ok</string>
    <string name="volver">volver</string>
</resources>