<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvProductos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/productos"
        android:textSize="27sp" />

    <EditText
        android:id="@+id/etIdProd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/id_del_producto"
        android:inputType="number" />

    <EditText
        android:id="@+id/etNombreProd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/nombre_del_producto"
        android:inputType="textPersonName" />

    <AutoCompleteTextView
        android:id="@+id/actTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/tipo_de_producto" />

    <Spinner
        android:id="@+id/spnEstado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_weight="1"
        android:animateLayoutChanges="false"
        android:popupBackground="@color/teal_700"
        android:textAlignment="center" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="180dp">



        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textColorHighlight="#FFFFFF"
            app:backgroundTint="#126A16"/>

        <Button
            android:id="@+id/btnVolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/volver"
            app:backgroundTint="#910D03"/>

    </LinearLayout>

</LinearLayout>